<resources>
    <string name="app_name">RollaDex</string>

    <string name="create_character">Create Character</string>
    <string name="delete_character">Delete Character</string>

    <string name="character_name">Character Name</string>
    <string name="name">Name</string>
    <string name="alignment">Alignment</string>
    <string name="level">Level</string>
    <string name="level_display">Level %1$s</string>
    <string name="race">Race</string>
    <string name="character_class">Class</string>
    <string name="character_class_display">%1s %2s</string>

    <string name="aarakocra">Aarakocra</string>
    <string name="aasimar">Aasimar</string>
    <string name="bugbear">Bugbear</string>
    <string name="centaur">Centaur</string>
    <string name="changeling">Changeling</string>
    <string name="dragonborn">DragonBorn</string>
    <string name="dwarf">Dwarf</string>
    <string name="elf">Elf</string>
    <string name="firbolg">Firbolg</string>
    <string name="genasi">Genasi</string>
    <string name="gith">Gith</string>
    <string name="goblin">Goblin</string>
    <string name="goliath">Goliath</string>
    <string name="gnome">Gnome</string>
    <string name="grung">Grung</string>
    <string name="halfElf">Half-Elf</string>
    <string name="halfOrc">Half-Orc</string>
    <string name="halfling">Halfling</string>
    <string name="hobgoblin">Hobgoblin</string>
    <string name="human">Human</string>
    <string name="kalashtar">Kalashtar</string>
    <string name="kenku">Kenku</string>
    <string name="kobold">Kobold</string>
    <string name="leonin">Leonin</string>
    <string name="lizardfolk">Lizardfolk</string>
    <string name="locathah">Locathah</string>
    <string name="loxodon">Loxodon</string>
    <string name="minotaur">Minotaur</string>
    <string name="orc">Orc</string>
    <string name="satyr">Satyr</string>
    <string name="shifter">Shifter</string>
    <string name="simic">Simic Hybrid</string>
    <string name="tabaxi">Tabaxi</string>
    <string name="tiefling">Tiefling</string>
    <string name="triton">Triton</string>
    <string name="tortle">Tortle</string>
    <string name="vedalken">Vedalken</string>
    <string name="verdan">Verdan</string>
    <string name="warforged">Warforged</string>
    <string name="yuanti">Yuan-Ti Pureblood</string>

    <string-array name="races_array">
        <item>@string/aarakocra</item>
        <item>@string/aasimar</item>
        <item>@string/bugbear</item>
        <item>@string/centaur</item>
        <item>@string/changeling</item>
        <item>@string/dragonborn</item>
        <item>@string/dwarf</item>
        <item>@string/elf</item>
        <item>@string/firbolg</item>
        <item>@string/gith</item>
        <item>@string/genasi</item>
        <item>@string/goblin</item>
        <item>@string/goliath</item>
        <item>@string/gnome</item>
        <item>@string/grung</item>
        <item>@string/halfElf</item>
        <item>@string/halfOrc</item>
        <item>@string/halfling</item>
        <item>@string/hobgoblin</item>
        <item>@string/human</item>
        <item>@string/kalashtar</item>
        <item>@string/kenku</item>
        <item>@string/kobold</item>
        <item>@string/leonin</item>
        <item>@string/locathah</item>
        <item>@string/lizardfolk</item>
        <item>@string/loxodon</item>
        <item>@string/minotaur</item>
        <item>@string/orc</item>
        <item>@string/satyr</item>
        <item>@string/shifter</item>
        <item>@string/simic</item>
        <item>@string/tabaxi</item>
        <item>@string/tiefling</item>
        <item>@string/triton</item>
        <item>@string/tortle</item>
        <item>@string/vedalken</item>
        <item>@string/verdan</item>
        <item>@string/warforged</item>
        <item>@string/yuanti</item>
    </string-array>

    <string name="artificer">Artificer</string>
    <string name="barbarian">Barbarian</string>
    <string name="bard">Bard</string>
    <string name="cleric">Cleric</string>
    <string name="druid">Druid</string>
    <string name="fighter">Fighter</string>
    <string name="monk">Monk</string>
    <string name="paladin">Paladin</string>
    <string name="ranger">Ranger</string>
    <string name="rogue">Rogue</string>
    <string name="sorcerer">Sorcerer</string>
    <string name="warlock">Warlock</string>
    <string name="wizard">Wizard</string>
    <string name="save_basic_info">Save Basic Info</string>
    <string name="strength">Strength</string>
    <string name="dexterity">Dexterity</string>
    <string name="constitution">Constitution</string>
    <string name="intelligence">Intelligence</string>
    <string name="wisdom">Wisdom</string>
    <string name="charisma">Charisma</string>

    <string-array name="classes_array">
        <item>@string/artificer</item>
        <item>@string/barbarian</item>
        <item>@string/bard</item>
        <item>@string/cleric</item>
        <item>@string/druid</item>
        <item>@string/fighter</item>
        <item>@string/monk</item>
        <item>@string/paladin</item>
        <item>@string/ranger</item>
        <item>@string/rogue</item>
        <item>@string/sorcerer</item>
        <item>@string/warlock</item>
        <item>@string/wizard</item>
    </string-array>

    <string name="lawfulgood">Lawful Good</string>
    <string name="neutralgood">Neutral Good</string>
    <string name="chaoticgood">Chaotic Good</string>
    <string name="lawfulneutral">Lawful Neutral</string>
    <string name="trueneutral">True Neutral</string>
    <string name="chaoticneutral">Chaotic Neutral</string>
    <string name="lawfulevil">Lawful Evil</string>
    <string name="neutralevil">Neutral Evil</string>
    <string name="chaoticevil">Chaotic Evil</string>

    <string-array name="alignment_array">
        <item>@string/lawfulgood</item>
        <item>@string/neutralgood</item>
        <item>@string/chaoticgood</item>
        <item>@string/lawfulneutral</item>
        <item>@string/trueneutral</item>
        <item>@string/chaoticneutral</item>
        <item>@string/lawfulevil</item>
        <item>@string/neutralevil</item>
        <item>@string/chaoticevil</item>
    </string-array>

    <string name="cancel">Cancel</string>
    <string name="update">Update</string>

    <string name="subclass">SubClass</string>
    <string name="xp">XP</string>
    <string name="background">Background</string>
    <string name="inspiration">Inspiration</string>
    <string name="armor_class">Armor Class</string>
    <string name="speed">Speed</string>
    <string name="initiative">Initiative</string>
    <string name="proficiency">Proficiency</string>
    <string name="saving_throws">Saving Throws</string>
    <string name="skills">Skills</string>
    <string name="single_character_filler">0</string>

    <string name="Acrobatics">Acrobatics</string>
    <string name="AnimalHandling">Animal Handling</string>
    <string name="Arcana">Arcana</string>
    <string name="Athletics">Athletics</string>
    <string name="Deception">Deception</string>
    <string name="History">History</string>
    <string name="Insight">Insight</string>
    <string name="Intimidation">Intimidation</string>
    <string name="Investigation">Investigation</string>
    <string name="Medicine">Medicine</string>
    <string name="Nature">Nature</string>
    <string name="Perception">Perception</string>
    <string name="Performance">Performance</string>
    <string name="Persuasion">Persuasion</string>
    <string name="Religion">Religion</string>
    <string name="SlightOfHand">Slight of Hand</string>
    <string name="Stealth">Stealth</string>
    <string name="Survival">Survival</string>

</resources>
