<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_characterName"
        android:inputType="text"
        android:hint="@string/character_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_characterLevel"
        android:inputType="number"
        android:hint="@string/level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:importantForAutofill="no" />

    <AutoCompleteTextView
        android:id="@+id/actv_characterRace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/race"
        android:textSize="22sp"
        android:importantForAutofill="no"/>

    <AutoCompleteTextView
        android:id="@+id/actv_characterClass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/character_class"
        android:textSize="22sp"
        android:importantForAutofill="no"/>

    <Button
        android:id="@+id/button_saveCharacter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/create_character"
        android:layout_margin="16dp" />

</LinearLayout>