<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="cs"
            type="io.github.austinread.rolladex.entities.CharacterSheet" />

        <import type="io.github.austinread.rolladex.utils.BindingUtils" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".activities.CharacterSheetActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_label_strength"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strength" />

                <TextView
                    android:id="@+id/tv_character_strength"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(cs.strength)}"
                    tools:text="10" />

                <TextView
                    android:id="@+id/tv_character_strength_mod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{BindingUtils.getAbilityModifierString(cs.strength)}"
                    tools:text="+0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_label_dex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dexterity" />

                <TextView
                    android:id="@+id/tv_character_dex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(cs.dexterity)}"
                    tools:text="10" />

                <TextView
                    android:id="@+id/tv_character_dex_mod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{BindingUtils.getAbilityModifierString(cs.dexterity)}"
                    tools:text="+0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_label_con"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/constitution" />

                <TextView
                    android:id="@+id/tv_character_con"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(cs.constitution)}"
                    tools:text="10" />

                <TextView
                    android:id="@+id/tv_character_con_mod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{BindingUtils.getAbilityModifierString(cs.constitution)}"
                    tools:text="+0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_label_int"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/intelligence" />

                <TextView
                    android:id="@+id/tv_character_int"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(cs.intelligence)}"
                    tools:text="10" />

                <TextView
                    android:id="@+id/tv_character_int_mod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{BindingUtils.getAbilityModifierString(cs.intelligence)}"
                    tools:text="+0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_label_wis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wisdom" />

                <TextView
                    android:id="@+id/tv_character_wis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(cs.wisdom)}"
                    tools:text="10" />

                <TextView
                    android:id="@+id/tv_character_wis_mod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{BindingUtils.getAbilityModifierString(cs.wisdom)}"
                    tools:text="+0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_label_char"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/charisma" />

                <TextView
                    android:id="@+id/tv_character_char"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(cs.charisma)}"
                    tools:text="10" />

                <TextView
                    android:id="@+id/tv_character_char_mod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{BindingUtils.getAbilityModifierString(cs.charisma)}"
                    tools:text="+0" />
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>